--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/default-layout.astro';
     aria-labelledby="site-title-heading"
     class="hero-section d-flex align-items-center justify-content-center text-white"
   >
-    <h1 id="site-title-heading" class="text-center">
+    <h1 class="text-center" id="site-title-heading">
       Pen's Pulse <br />
       技術筆記與開發心得
     </h1>
@@ -23,7 +23,7 @@ import Layout from '../layouts/default-layout.astro';
               <div class="card-body">
                 <h3 class="card-title card-title-underline fs-5">研究筆記</h3>
                 <p class="card-text mt-2">簡短的摘要，通常不會寫太長，主要寫給自己快速回顧。</p>
-                <a href="#" class="card-link">閱讀更多</a>
+                <a class="card-link" href="#">閱讀更多</a>
               </div>
             </article>
           </div>
@@ -32,7 +32,7 @@ import Layout from '../layouts/default-layout.astro';
               <div class="card-body">
                 <h3 class="card-title card-title-underline fs-5">挑戰計畫</h3>
                 <p class="card-text mt-2">以紀錄個人小型專案開發為主的系列文章。</p>
-                <a href="#" class="card-link">閱讀更多</a>
+                <a class="card-link" href="#">閱讀更多</a>
               </div>
             </article>
           </div>
@@ -41,7 +41,7 @@ import Layout from '../layouts/default-layout.astro';
               <div class="card-body">
                 <h3 class="card-title card-title-underline fs-5">心得文章</h3>
                 <p class="card-text mt-2">與職涯、工作、活動等相關的心得文章。</p>
-                <a href="#" class="card-link">閱讀更多</a>
+                <a class="card-link" href="#">閱讀更多</a>
               </div>
             </article>
           </div>
@@ -66,7 +66,7 @@ import Layout from '../layouts/default-layout.astro';
                   >、<span class="fw-bold">產品展示</span>等管理層面來協助學生完成網站專題。
                 </p>
               </div>
-              <img src="/avatar.png" alt="Shin" class="avatar rounded-circle" />
+              <img alt="Shin" class="avatar rounded-circle" src="/avatar.png" />
             </article>
           </div>
 
