--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,7 +1,7 @@
 <footer class="footer py-3 bg-body-secondary text-center">
   <div>
     © 2025 Pen's Pulse. All rights reserved. <br class="d-lg-none" />
-    <a href="mailto:penspulse@gmail.com" class="text-decoration-none">✉️ penspulse@gmail.com</a>
+    <a class="text-decoration-none" href="mailto:penspulse@gmail.com">✉️ penspulse@gmail.com</a>
   </div>
 </footer>
 
