--- a/src/components/navbar/notes-menu.astro
+++ b/src/components/navbar/notes-menu.astro
@@ -1,30 +1,30 @@
 ---
 import type { CategoryWithNotes } from '../../utils/notes';
-import NotesNavigation from '../notes/notes-navigation.astro';
 
+import NotesNavigation from '../notes/notes-navigation.astro';
 interface Props {
-  notesNavigation: CategoryWithNotes[];
   activeNoteId?: string;
+  notesNavigation: CategoryWithNotes[];
 }
 
-const { notesNavigation, activeNoteId } = Astro.props as Props;
+const { activeNoteId, notesNavigation } = Astro.props as Props;
 ---
 
 <div id="notes-menu-container">
   <button
+    class="btn btn-link text-decoration-none p-2 mb-3 fw-semibold w-100 text-start bg-body-secondary mt-n3 rounded-0"
     id="back-to-main-menu"
     type="button"
-    class="btn btn-link text-decoration-none p-2 mb-3 fw-semibold w-100 text-start bg-body-secondary mt-n3 rounded-0"
   >
     <i class="bi bi-arrow-left me-1"></i>
     回到主選單
   </button>
   <div class="notes-drawer px-2">
     <NotesNavigation
-      navigation={notesNavigation}
+      aAttrs={() => ({ 'data-bs-dismiss': 'offcanvas' })}
       activeId={activeNoteId}
       id="notes-drawer-accordion"
-      aAttrs={() => ({ 'data-bs-dismiss': 'offcanvas' })}
+      navigation={notesNavigation}
     />
   </div>
 </div>
