--- a/src/components/navbar/theme-toggler.astro
+++ b/src/components/navbar/theme-toggler.astro
@@ -1,6 +1,6 @@
-<button class="btn ps-lg-2 ps-0 pe-2 py-1" id="bd-theme" type="button" aria-label="Toggle theme">
-  <i id="moon-icon" class="bi bi-moon-fill d-none"></i>
-  <i id="sun-icon" class="bi bi-sun-fill"></i>
+<button aria-label="Toggle theme" class="btn ps-lg-2 ps-0 pe-2 py-1" id="bd-theme" type="button">
+  <i class="bi bi-moon-fill d-none" id="moon-icon"></i>
+  <i class="bi bi-sun-fill" id="sun-icon"></i>
 
   <script>
     const themeToggleBtn = document.getElementById('bd-theme')!;
