chore: import plans

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -47,7 +47,7 @@ if (isNotesRoute) {
       <div class="d-flex justify-content-between w-100">
         <!-- 左欄 -->
         <div class="d-flex align-items-center">
-          <!-- 品牌標誌 -->
+          <!-- Logo -->
           <a class="navbar-brand me-4" href="/">
             <img alt="Pen's Pulse 首頁" class="d-inline-block align-text-top" height="30" src="/logo.png" />
           </a>
@@ -60,7 +60,7 @@ if (isNotesRoute) {
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/challenges">
+              <a class="nav-link" href="/plans">
                 <span>挑戰計畫</span>
               </a>
             </li>
