fix: fix article width problems

--- a/src/layouts/article-layout.astro
+++ b/src/layouts/article-layout.astro
@@ -29,7 +29,7 @@ const { activeId, ariaLabel, description, headings = [], navigation, showToc = t
       </div>
 
       <!-- 內文 -->
-      <div class="flex-grow-1">
+      <div class="flex-grow-1" style={{ minWidth: 0 }}>
         <slot />
       </div>
 
