--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -89,7 +89,7 @@ if (isNotesRoute) {
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/articles">
+              <a class="nav-link" href="/posts">
                 <span>心得文章</span>
               </a>
             </li>
