--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import Layout from '../layouts/default-layout.astro';
               <div class="card-body">
                 <h3 class="card-title card-title-underline fs-5">心得文章</h3>
                 <p class="card-text mt-2">與職涯、工作、活動等相關的心得文章。</p>
-                <a class="card-link" href="#">閱讀更多</a>
+                <a class="card-link" href="/posts">閱讀更多</a>
               </div>
             </article>
           </div>
