--- a/src/layouts/article-layout.astro
+++ b/src/layouts/article-layout.astro
@@ -36,7 +36,7 @@ const { activeId, ariaLabel, description, headings = [], navigation, showToc = t
       <!-- 目錄 -->
       {
         showToc && headings.length > 0 && (
-          <div class="d-none d-lg-block flex-shrink-0" style={{ width: '200px' }}>
+          <div class="d-none d-lg-block flex-shrink-0 sticky-top top-1" style={{ width: '200px' }}>
             <TableOfContents headings={headings} variant="desktop" />
           </div>
         )
