--- a/src/layouts/default-layout.astro
+++ b/src/layouts/default-layout.astro
@@ -89,7 +89,7 @@ const fullOgImageUrl = new URL(ogImage, baseUrl).href;
       }
 
       body {
-        overflow-y: auto;
+        overflow-y: visible;
       }
 
       /* 主要內容區域最小高度 */
