--- a/src/layouts/article-layout.astro
+++ b/src/layouts/article-layout.astro
@@ -12,35 +12,92 @@ interface Props {
   ariaLabel?: string;
   description?: string;
   headings?: MarkdownHeading[];
-  navigation: CategoryWithContent[];
+  navigation?: CategoryWithContent[];
   showToc?: boolean;
   title: string;
 }
 
 const { activeId, ariaLabel, description, headings = [], navigation, showToc = true, title } = Astro.props;
+const hasCustomSidebar = Astro.slots.has('sidebar');
 ---
 
 <Layout description={description} title={title}>
-  <div class="container py-5">
+  <div class="container">
     <div class="d-flex">
       <!-- 側邊導覽 -->
-      <div class="flex-shrink-0">
-        <ContentSidebar activeId={activeId} ariaLabel={ariaLabel} navigation={navigation} />
+      <div class="content-sidebar flex-shrink-0">
+        {
+          hasCustomSidebar ? (
+            <slot name="sidebar" />
+          ) : navigation ? (
+            <ContentSidebar activeId={activeId} ariaLabel={ariaLabel} navigation={navigation} />
+          ) : null
+        }
       </div>
 
       <!-- 內文 -->
-      <div class="flex-grow-1" style={{ minWidth: 0 }}>
+      <div class="flex-grow-1 py-4" style={{ minWidth: 0 }}>
         <slot />
       </div>
 
       <!-- 目錄 -->
       {
         showToc && headings.length > 0 && (
-          <div class="d-none d-lg-block flex-shrink-0 sticky-top top-1" style={{ width: '200px' }}>
+          <aside class="content-toc d-none d-lg-block flex-shrink-0" style={{ width: '200px' }}>
             <TableOfContents headings={headings} variant="desktop" />
-          </div>
+          </aside>
         )
       }
     </div>
   </div>
 </Layout>
+
+<style>
+  .content-sidebar {
+    @media (width >= 992px) {
+      position: sticky;
+      top: calc(1rem + 60px);
+      align-self: flex-start;
+      max-height: calc(100dvh - 60px - 6rem);
+      overflow: scroll;
+    }
+
+    /* 捲軸樣式 */
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: rgb(var(--bs-primary-rgb), 0.4);
+      border-radius: 0;
+    }
+  }
+
+  .content-toc {
+    @media (width >= 992px) {
+      position: sticky;
+      top: calc(1rem + 60px);
+      align-self: flex-start;
+      max-height: calc(100dvh - 60px - 6rem);
+      overflow-y: auto;
+    }
+
+    /* 捲軸樣式 */
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: rgb(var(--bs-primary-rgb), 0.4);
+      border-radius: 0;
+    }
+  }
+</style>
